[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-proxy"
version = "0.1.0"
description = "Small HTTP proxy for LLM requests with runtime and communication logging."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
llm-proxy = "app:main"

[tool.setuptools]
py-modules = ["app"]
